<resources>
    <string name="app_name">FP Counseling</string>
    <string name="app_logo_alt">Nurhi Logo</string>
    <string name="menu_download">Manage Courses</string>
    <string name="menu_language">Library</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_read_aloud">Read aloud</string>
    <string name="menu_stop_read_aloud">Stop reading</string>
    <string name="service_tracker">Nurhi Tracker Service</string>
    <string name="title_about">About/Licenses</string>
    <string name="title_help">Help</string>
    <string name="title_activity_module_index">Course index</string>
    <string name="title_activity_module">Activity</string>
    <string name="title_download_activity">Manage courses</string>
    <string name="title_prefs">Settings</string>
    <string name="title_tag_select_activity">Select Category</string>
    <string name="version">Version: %1$s</string>
    <string name="title_module_about">About Course</string>
    <string name="title_download_media">Download Media</string>
    <string name="title_points">Your Points</string>
    <string name="activity_module_button_prev">&lt;</string>
    <string name="activity_module_button_next">&gt;</string>
    <string name="widget_mquiz_next">Next &gt;&gt;</string>
    <string name="widget_mquiz_prev">&lt;&lt; Prev</string>
    <string name="widget_mquiz_getresults">Get Results</string>
    <string name="widget_mquiz_noanswergiven">Please give an answer before moving to the next question</string>
    <string name="widget_mquiz_progress">Question %1$d of %2$d</string>
 	<string name="widget_mquiz_results">Results</string>
 	<string name="widget_mquiz_results_intro">You scored:</string>
 	<string name="widget_mquiz_results_score">%1$.0f%%</string>
 	<string name="module_context_reset">Reset</string>
 	<string name="module_context_delete">Delete</string>
 	<string name="module_context_reset_confirm">Are you sure you want to reset this course? It will remove all the progress logs for this course.</string>
 	<string name="module_context_delete_confirm">Are you sure you want to delete this course? It will completely remove the course from your phone.</string>
 	<string name="no_modules">There are no courses currently installed</string>
 	<string name="prefServer">Server</string>
	<string name="prefServerDefault">http://220.226.2.31:83/</string>
	<string name="prefLanguage">Preferred Language</string>
	<string name="prefAdvanced">Advanced settings</string>
	<string name="prefServerTimeoutConnection">Connection timeout</string>
	<string name="prefServerTimeoutConnectionDefault">10000</string>
	<string name="prefServerTimeoutResponse">Response timeout</string>
	<string name="prefServerTimeoutResponseDefault">20000</string>
	<string name="prefBackgroudDataConnect">Background activity tracker</string>
	<string name="prefBackgroudDataConnect_summary">Send activity logs even when this application isn\'t running</string>
	<string name="prefShowScheduleReminders">Display suggested activities</string>
	<string name="prefShowScheduleReminders_summary">Show which activities you are due to complete next</string>
	<string name="prefNoScheduleReminders">Number of suggested activities</string>
	<string name="prefNoScheduleReminders_summary">How many suggested activities to display</string>
	<string name="notification_module_update_title">New course updates</string>
	<string name="notification_module_update_text">Updates are available for your courses.</string>
	<string name="title_login">Login</string>
	<string name="login_username_title">Username</string>
	<string name="login_password_title">Password</string>
	<string name="title_register">Register</string>
	<string name="register_form_username_title">Username</string>
	<string name="register_form_email_title">Email address</string>
	<string name="register_form_firstname_title">First name</string>
	<string name="register_form_lastname_title">Last name</string>
	<string name="register_form_password_title">Password</string>
	<string name="register_form_password_again_title">Password (again)</string>
	<string name="register_btn_text">Register</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="close">Close</string>
	<string name="error">Error</string>
	<string name="info">Info</string>
	<string name="warning">Warning</string>
	<string name="loading">Loading</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="logout">Logout</string>
	<string name="feedback">Feedback</string>
	<string name="download">Download</string>
	<string name="downloaded">Downloaded</string>
	<string name="tag_label">%1$s (%2$d)</string>
	<string name="alt_activity_icon">Activity icon</string>
	<string name="update">Update</string>
	<string name="update_schedule">Update Schedule</string>
	<string name="installed">Installed</string>
	<string name="install">Install</string>
	<string name="download_starting">Download starting</string>
	<string name="downloading">Downloading &#8230;</string>
	<string name="download_complete">Download complete</string>
	<string name="update_starting">Getting schedule updates</string>
	<string name="updating">Updating &#8230;</string>
	<string name="update_complete">Schedule update complete</string>
	<string name="installing_module">Installing: %1$s</string>
	<string name="install_complete">Installation complete</string>
	<string name="install_module_complete">%1$s: installed</string>
	<string name="info_scan_media_start">Scanning for media</string>
	<string name="info_scan_media_checking">Checking for: %1$s</string>
	<string name="info_scan_media_missing">Some media files are missing for your courses.</string>
	<string name="loading_modules">Loading courses</string>
	<string name="scan_media_download_button">Download</string>
	<string name="scan_media_download_via_pc_button">Download via PC</string>
	<string name="success_media_download">Media file: \'%1$s\' successfully downloaded.</string>
	<string name="media_file_size">%1$.1fMb</string>
	<string name="media_file_size_unknown">unknown file size</string>
	<string name="error_connection">Error connecting to server. Please check you have an active internet connection and try again.</string>
	<string name="error_connection_required1">You need an active internet connection to access this page. Please turn on wifi or mobile internet connection and try again.</string>
	<string name="error_processing_response">Error processing response</string>
	<string name="error_no_username">Please enter your username</string>
	<string name="error_installing_module">%1$s: failed to install</string>
	<string name="error_latest_already_installed">%1$s: latest version already installed</string>
	<string name="error_login">Invalid username/password\nPlease try again</string>
	<string name="error_sdcard">Your SD card is not available - please restart this app when the SD card is available.\nThe app will now close.</string>
	<string name="error_media_not_found">Media file: \'%1$s\' not found.</string>
	<string name="error_media_unsupported">\'%1$s\' does not appear to be a supported media file type.</string>
	<string name="error_download_failure">Download failed</string>
	<string name="error_update_failure">Update failed</string>
	<string name="error_install_failure">Install failed</string>
	<string name="error_media_download">Error trying to download media, please try again later</string>
	<string name="error_reading_xml">An error occured trying to load the course. Please reinstall the course.</string>
	<string name="error_tts_start">Text To Speech failed. Please check your phone to ensure have Text to Speech installed and enabled</string>
	<string name="warning_wifi_required">You must be connected to a wifi network to download the media files.\nPlease connect to a wifi network to download the media files on your phone, or download the files via your PC.</string>
	<string name="loading_module_list">Getting list of courses</string>
	<string name="loading_points">Getting points</string>
	<string name="login_process">Logging in</string>
	<string name="login_complete">Logged in</string>
	<string name="logout_confirm">Are you sure you want to logout?\n\nLogging out will remove all your activity logs from this phone. You will need an active internet connection to log in again.</string>
	<string name="register_process">Registering</string>
	<string name="register_complete">Successfully registered</string>
	<string name="change_language">Change Language</string>
	<string name="download_via_pc_message">A small file \'%1$s\' has been placed on your phone SD card, open this on your computer and follow the instructions to download the media files and copy them onto your phone SD card.</string>
	<string name="download_via_pc_title">Download Media Files</string>
	<string name="download_via_pc_intro">Download each of the files below to your PC (use right click, save-as)</string>
	<string name="download_via_pc_final">Once you have downloaded the files copy them to the \'%1$s\' directory on your phone SD card.</string>
	<string name="schedule_reminders">Suggested next activities:</string>
	<string name="questn_1">What city do you currently work in?</string>
    <string name="questn_1_a">A: Abuja</string>
    <string name="questn_1_b">B: Benin City</string>
    <string name="questn_1_c">C: Ibadan</string>
    <string name="questn_1_d">D: Ilorin</string>
    <string name="questn_1_e">E: Kaduna</string>
    <string name="questn_1_f">F: Zaria</string>
    <string name="questn_2">In what city did you receive the majority of your professional training?</string>
    <string name="questn_3">Where did you grow up?</string>
    <string name="questn_3_1">CITY:</string>
    <string name="questn_3_2">STATE:</string>
    <string name="questn_3_3">COUNTRY:</string>
    <string name="questn_4">What type of facility do you work at currently?</string>
    <string name="questn_4_a">A: Public Hospital</string>
    <string name="questn_4_b">B: Private Hospital</string>
    <string name="questn_4_c">C: Primary Health Center</string>
    <string name="questn_4_d">D: Maternity Clinic</string>
    <string name="questn_4_e">E: Clinic</string>
    <string name="questn_4_f">F: Pharmacy</string>
    <string name="questn_4_g">G: PMV</string>
    <string name="questn_4_h">H: Other (specify)</string>
    <string name="questn_5">What is the name of the facility where you currently work?</string>
    <string name="questn_6">What is the location of the facility?</string>
    <string name="questn_7">What type of staff are you?</string>
    <string name="questn_7_a">A: Physician</string>
    <string name="questn_7_b">B: Midwife</string>
    <string name="questn_7_c">C: Nurse</string>
    <string name="questn_7_d">D. Nurse-Midwife</string>
    <string name="questn_7_e">E: FP/RH Coordinator</string>
    <string name="questn_7_f">F: FP Trainer</string>
    <string name="questn_7_g">G: Other (specify):</string>
    <string name="questn_8">Have you received any training for family planning?</string>
    <string name="questn_8_a">A: Yes</string>
    <string name="questn_8_b">B: No</string>
    <string name="questn_18">If you have received training who provided it?</string>
    <string name="questn_18_a">A: NURHI</string>
    <string name="questn_18_b">B: Other sources</string>
    <string name="questn_9">How many times did you attend NURHI sponsored training?</string>
    <string name="questn_10">What type of family planning methods are available at your current place of employment? (SELECT ALL THAT APPLY)</string>
    <string name="questn_10_a">A: Combined oral contraceptive pills</string>
    <string name="questn_10_b">B: Progestin only oral contraceptive pills</string>
    <string name="questn_10_c">C: Male condoms</string>
</resources>