<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_language"
        android:icon="@drawable/ic_menu_start_conversation"
        android:orderInCategory="100"
        android:title="@string/menu_language"/>
    <item
        android:id="@+id/menu_help"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="100"
        android:title="@string/menu_help"/>
    <item
        android:id="@+id/menu_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="100"
        android:title="Tracker"/>
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_action_logout"
        android:orderInCategory="100"
        android:title="@string/menu_logout"/>

</menu>