<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <openwave.nurhi.mobile.learning.application.Header
        android:id="@+id/header"
        style="@style/Header" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                style="@style/PageHeadingText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/title_login" />

            <TextView
                android:id="@+id/main_email_title"
                style="@style/FieldLabelText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/login_username_title" />

            <EditText
                android:id="@+id/login_username_field"
                style="@style/FieldText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="5dp" />

            <TextView
                android:id="@+id/main_password_title"
                style="@style/FieldLabelText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/login_password_title" />

            <EditText
                android:id="@+id/login_password_field"
                style="@style/FieldText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="5dp" />

            <Button
                android:id="@+id/login_btn"
                style="@style/ButtonText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:onClick="onLoginClick"
                android:text="@string/title_login" />

            <Button
                android:id="@+id/register_btn"
                style="@style/ButtonText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:onClick="onRegisterClick"
                android:text="@string/title_register" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>